[package]
name = "empowerd"
version = "0.8.5"
license = "AGPL-3.0-or-later"
description = "empowers the offline smart home"
authors = ["Max Maisel <max.maisel@posteo.de>"]
readme = "README.md"
edition = "2021"
rust-version = "1.59.0"

[package.metadata.deb]
assets = [
    ["target/release/empowerd", "bin/", "755"],
    ["target/release/modbus-tcp", "bin/", "755"],
    ["target/release/sunspec-enum", "bin/", "755"],
    ["target/release/00001_convert_battery_charge", "usr/libexec/empowerd/", "755"],
    ["data/empowerd.conf", "etc/empowerd/", "600"],
    ["data/empowerd.logrotate", "etc/logrotate.d/empowerd", "644"],
    ["data/nginx-site.conf", "usr/share/doc/empowerd/", "644"],
    ["lib/bresser6in1-usb/bresser6in1.rules", "etc/udev/rules.d/", "644"],
    ["lib/sml-client/ttyusb-meter.rules", "etc/udev/rules.d/", "644"],
    ["gui/build/*", "usr/share/empowerd/www", "644"],
    ["gui/build/static/css/*", "usr/share/empowerd/www/static/css", "644"],
    ["gui/build/static/js/*", "usr/share/empowerd/www/static/js", "644"]
]
conf-files = [
    "etc/empowerd/empowerd.conf",
    "etc/logrotate.d/empowerd"
]
changelog = "ChangeLog"
maintainer-scripts = "scripts/"

[package.metadata.deb.systemd-units]

[workspace]
members = [
    "lib/bresser6in1-usb",
    "lib/dachs-client",
    "lib/lambda-client",
    "lib/kecontact-client",
    "lib/sma-client",
    "lib/sml-client",
    "lib/sunny-storage-client",
    "lib/sunspec-client",
    "lib/usb-reset",
    "migrations/",
    "utils/"
]

[lib]
name = "libempowerd"
path = "src/lib.rs"

[profile.release]
lto = "thin"

[dependencies]
bresser6in1-usb = { version = "*", path = "lib/bresser6in1-usb/" }
dachs-client = { version = "*", path = "lib/dachs-client/" }
lambda-client = { version = "*", path = "lib/lambda-client/" }
kecontact-client = { "version" = "*", path = "lib/kecontact-client" }
sma-client = { version = "*", path = "lib/sma-client/" }
sml-client = { version = "*", path = "lib/sml-client/" }
sunny-storage-client = { version = "*", path = "lib/sunny-storage-client/" }
sunspec-client = { version = "*", path = "lib/sunspec-client/" }
usb-reset = { version = "*", path = "lib/usb-reset/" }

futures = ">=0.3.21"
slog = { version=">=2.7", features=["max_level_trace", "release_max_level_debug"] }
sloggers = { version=">=1.0", default_features=false }
#slog-async = "*"
tokio = { version=">=1.0", features=["full"] }

chrono = ">=0.4.19"
diesel = { version = ">=2.1.0", features = ["chrono", "postgres"] }
diesel-async = { version=">=0.4.1", features = ["deadpool", "postgres"] }
diesel_migrations = { version = ">=2.1.0" }
influxdb = { version = ">=0.6.0", features = ["derive", "reqwest-client", "use-serde"], default-features = false }

daemonize = ">=0.4.1"
getopts = ">=0.2.21"
serde = { version = ">=1.0", features = ["derive"] }
serde_json = ">=1.0"
toml = ">=0.5.8"

juniper = ">=0.15.9"
hyper = { version = ">=0.14", features = ["server", "runtime"] }
juniper_hyper = ">=0.8.0"

jwt = ">=0.16.0"
hmac = ">=0.12.1"
sha2 = ">=0.10.2"
ring = ">=0.16.20"
base64 = ">=0.21.0"
rust-argon2 = ">=1.0"

gpio-cdev = ">=0.4.0"
uom = ">=0.34.0"
spa = ">=0.3.1"
