[package]
name = "empowerd"
description = "empowers the offline smart home"
readme = "README.md"

version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.deb]
assets = [
    ["target/release/empowerd", "bin/", "755"],
    ["target/release/modbus-tcp", "bin/", "755"],
    ["target/release/sunspec-enum", "bin/", "755"],
    ["target/release/00001_convert_battery_charge", "usr/libexec/empowerd/", "755"],
    ["target/release/00002_migrate_to_postgres", "usr/libexec/empowerd/", "755"],
    ["target/release/00003_fix_heatpump_heat", "usr/libexec/empowerd/", "755"],
    ["data/empowerd.conf", "etc/empowerd/", "600"],
    ["data/empowerd.logrotate", "etc/logrotate.d/empowerd", "644"],
    ["data/nginx-site.conf", "usr/share/doc/empowerd/", "644"],
    ["data/ws6in1.rules", "etc/udev/rules.d/", "644"],
    ["lib/sml-client/ttyusb-meter.rules", "etc/udev/rules.d/", "644"],
]
conf-files = [
    "etc/empowerd/empowerd.conf",
    "etc/logrotate.d/empowerd"
]
changelog = "ChangeLog"
maintainer-scripts = "scripts/"

[package.metadata.deb.systemd-units]

[workspace]
members = [
    "lib/dachs-client",
    "lib/lambda-client",
    "lib/kecontact-client",
    "lib/sml-client",
    "lib/sunny-storage-client",
    "lib/sunspec-client",
    "lib/usb-reset",
    "migrations/",
    "utils/"
]

[workspace.package]
version = "0.11.0"
license = "AGPL-3.0-or-later"
authors = ["Max Maisel <max.maisel@posteo.de>"]
edition = "2021"
rust-version = "1.64.0"

[workspace.dependencies]
chrono = ">=0.4.38"
clap = { version = "4.3.24", features = ["derive"] }
diesel = { version = ">=2.2.2", features = ["chrono", "postgres"] }
diesel-async = { version=">=0.5.0", features = ["deadpool", "postgres"] }
diesel_migrations = { version = ">=2.2.0" }
serde = { version = ">=1.0", features = ["derive"] }
slog = { version=">=2.7", features=["max_level_trace", "release_max_level_debug"] }
tokio = { version=">=1.0", features=["full"] }
tokio-modbus = { version=">=0.14.0", features = ["tcp"], default-features = false }

[workspace.dependencies.influxdb]
version = ">=0.7.2"
features = ["derive", "reqwest-client", "use-serde"]
default-features = false

[lib]
name = "libempowerd"
path = "src/lib.rs"

[profile.release]
lto = "thin"

[dependencies]
dachs-client.path = "lib/dachs-client/"
lambda-client.path = "lib/lambda-client/"
kecontact-client.path = "lib/kecontact-client"
sml-client.path = "lib/sml-client/"
sunny-storage-client.path = "lib/sunny-storage-client/"
sunspec-client.path = "lib/sunspec-client/"
usb-reset.path = "lib/usb-reset/"

sma-proto = { version = "1.1.0", features = ["client"] }
ws6in1-proto = { version = "1.0.0", features = ["client"] }

async-trait = ">=0.1.81"
futures = ">=0.3.21"
slog.workspace = true
sloggers = { version=">=2.0", default-features=false }
#slog-async = "*"
tokio.workspace = true
tokio-modbus.workspace = true

chrono.workspace = true
diesel.workspace = true
diesel-async.workspace = true
diesel_migrations.workspace = true
influxdb.workspace = true

clap.workspace = true
daemonize = ">=0.4.1"
serde.workspace = true
serde_json = ">=1.0"
toml = ">=0.5.8"

juniper = ">=0.16.1"
hyper = { version = ">=1.4", features = ["http1", "server"] }
hyper-util = { version = ">=0.1", features = ["tokio"] }
juniper_hyper = ">=0.9.0"

jwt = ">=0.16.0"
hmac = ">=0.12.1"
sha2 = ">=0.10.2"
ring = ">=0.16.20"
base64 = ">=0.21.0"
rust-argon2 = ">=1.0"

gpiocdev = ">=0.7.1"
uom = ">=0.34.0"
spa = ">=0.3.1"
