[package]
name = "empowerd-migrations"
version = "0.9.0"
license = "AGPL-3.0-or-later"
authors = ["Max Maisel <max.maisel@posteo.de>"]
edition = "2018"

[dependencies]
empowerd = { version = "*", path = "../" }

clap = { version = ">=4.4.12", features = ["derive"] }
influxdb = { version = ">=0.6.0", features = ["derive", "reqwest-client", "use-serde"], default-features = false }
tokio = { version=">=1.0", features=["full"] }
