[package]
name = "empowerd-migrations"

version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
empowerd.path = "../"

chrono.workspace = true
clap.workspace = true
diesel.workspace = true
diesel-async.workspace = true
diesel_migrations.workspace = true
influxdb.workspace = true
serde.workspace = true
tokio.workspace = true
