[package]
name = "empowerd-utils"
version = "0.4.0"
license = "AGPL-3.0-or-later"
authors = ["Max Maisel <max.maisel@posteo.de>"]
edition = "2018"

[dependencies]
clap = { version=">=3.1.5", features=["derive"] }
slog = ">=2.7"
tokio = { version=">=1.0", features=["full"] }
tokio-modbus = { version=">=0.5.0", features = ["tcp"], default-features = false }
