[package]
name = "bresser6in1-usb"
version = "0.1.0"
license = "AGPL-3.0-or-later"
authors = ["Max Maisel <max.maisel@posteo.de>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = ">=0.4.19"
bytes = ">=1.1.0"
hidapi = ">=1.3.3"
slog = ">=2.7"

[dev-dependencies]
byte-strings = "*"
