[package]
name = "dachs-client"
version = "0.2.0"
license = "AGPL-3.0-or-later"
authors = ["Max Maisel <max.maisel@posteo.de>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
lazy_static = ">=1.4.0"
regex = ">=1.4.5"
reqwest = ">=0.11.2"
slog = { version = ">=2.7", features = ["max_level_trace", "release_max_level_warn"] }

[dev-dependencies]
tokio = { version=">=1.0", features=["full"] }
