[package]
name = "dachs-client"
version = "0.2.0"
license = "AGPL-3.0-or-later"
authors = ["Max Maisel <max.maisel@posteo.de>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
lazy_static = ">=1.4.0"
regex = ">=1.4.5"
reqwest = ">=0.11.2"
slog = ">=2.7"

[dev-dependencies]
tokio = { version=">=1.0", features=["full"] }
