[package]
name = "kecontact-client"
version = "0.1.0"
license = "AGPL-3.0-or-later"
authors = ["Max Maisel <max.maisel@posteo.de>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version=">=1.0", features=["derive"] }
serde_json = ">=1.0"
slog = { version=">=2.7", features=["max_level_trace", "release_max_level_debug"] }
tokio = { version=">=1.0", features=["full"] }
