[package]
name = "lambda-client"
version = "0.1.0"
license = "AGPL-3.0-or-later"
authors = ["Max Maisel <max.maisel@posteo.de>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version=">=1.0", features=["full"] }
tokio-modbus = { version=">=0.5.0", features = ["tcp"], default-features = false }
