[package]
name = "sml-client"
version = "0.2.0"
authors = ["Max Maisel <max.maisel@posteo.de>"]
edition = "2018"

[lib]
path = "lib.rs"

[dependencies]
bytes = ">=1.0"
crc16 = ">=0.4"
slog = { version=">=2.7", features=["max_level_trace", "release_max_level_debug"] }
tokio = { version=">=1.0", features=["full"] }
tokio-serial = { git = "https://github.com/berkowski/tokio-serial.git", branch = "v4.4.0" }
