[package]
name = "sunny-storage-client"
version = "0.2.0"
license = "AGPL-3.0-or-later"
authors = ["Max Maisel <max.maisel@posteo.de>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = ">=0.1.51"
clap = ">=3.1.5"
slog = ">=2.7"
tokio = { version=">=1.0", features=["full"] }
tokio-modbus = { version=">=0.14.0", features = ["tcp"], default-features = false }
