[package]
name = "sunspec-client"
version = "0.2.0"
license = "AGPL-3.0-or-later"
authors = ["Max Maisel <max.maisel@posteo.de>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
clap = ">=3.1.5"
slog = ">=2.7"
tokio = { version=">=1.0", features=["full"] }
tokio-modbus = { version=">=0.14.0", features = ["tcp"], default-features = false }
